# fcst

./: AGENTS.md  pyproject.toml
doc/: cst.md  fparser_node.md
doc/todo/: local_analysis_passes.md  semantic_resolution.md
src/fcst/: __init__.py  cst.py
src/fcst/converters/: __init__.py  handlers.py  to_cst.py  to_fparser.py  to_text.py
tests/: test_converters.py  test_cst.py
