[project]
name = "fcst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Wanli-Wylie", email = "zhang.wl.earth@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fparser>=0.2.1",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
